--- a/src/modules.html
+++ b/src/modules.html
@@ -12,6 +12,8 @@
 <body>
     <div class="moduleapp">
         <div class="module" id="1">
+            
+
             <div class="menu">
                 <div class="evolve hidden">show<span>up:</span>evolve</div>
                 <div class="menu__block">
@@ -94,7 +96,7 @@
                         This module focuses on how to leverage your local muscle and generate leads in your local community. Topics include areas to develop like: your local gym, church, favorite local restaurant or bar, etc.. Along with local business networking groups, community involvement and charity work, local businesses (lender express and lender advantage), local lunch n learns, first time homebuyer education, VA
                         and or Reno events, and more.
                     </div>
-                    <div class="module__info-show">
+                    <div class="module__info-show" style="background-color: white; z-index: 10; position: relative;">
                         <div class="show">How are you showing up?</div>
                         <div class="plus">
                             <div class="plus__content">
@@ -105,6 +107,7 @@
                             </div>
                         </div>
                     </div>
+                   
                     <div class="msg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                     <hr>
                     <div class="module__info-book">
